# PyPolyCalculator

./: .coverage  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  contents.rst  index.rst  usage.rst
docs/source/api_reference/: index.rst  polycalculator.combat.rst  polycalculator.rst  polycalculator.status_effect.rst  polycalculator.trait.rst  polycalculator.unit.rst
src/polycalculator/: __init__.py  combat.py  status_effect.py  trait.py  unit.py
src/polycalculator/resources/: abbr_overrides.yaml  effect_abbrs.yaml  naval_abbr_overrides.yaml  naval_units.yaml  units.yaml
tests/: test_combat.py  test_unit.py
tests/resources/: multi_combat_data.yaml  single_combat_data.yaml
