[project]
name = "polycalculator"
version = "0.1.0"
description = "Python version of the PolyCalculator bot. Currently unfinished."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "BlueishTint", email = "bluetintisacolor@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["attrs>=25.3.0"]

[project.scripts]
polycalculator = "polycalculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["nox>=2025.2.9", "pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.4"]
docs = ["esbonio>=0.16.5", "sphinx>=8.2.3", "sphinx-rtd-theme>=3.0.2"]

[tool.pytest.ini_options]
addopts = "--cov polycalculator"
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["PT"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.coverage.report]
exclude_also = ["no cover: start(?s:.)*?no cover: stop"]
